--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.5",
+    "recharts": "^2.15.1",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
