--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "exceljs": "^4.4.0",
     "formidable": "^3.5.2",
     "googleapis": "^144.0.0",
+    "lucide-react": "^0.475.0",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.12.0",
     "next": "15.1.6",
     "react": "^19.0.0",
+    "react-datepicker": "^8.0.0",
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.5",
     "recharts": "^2.15.1",
